23 December 2010: dht-0.16:

  * Change the interface to allow sharing of the UDP socket e.g. with uTP.

1 July 2010: dht-0.15

  * Port to Windows, for the needs of Transmission.

25 March 2010: dht-0.14

  * Fixed ordering of entries in parameter dictionaries.

15 December 2009: dht-0.13

  * Implemented protection against incorrect addresses in the DHT.
  * Tweaked neighborhood maintenance to wake up less often.

11 December 2009: dht-0.12
  * Fixed slightly incorrect formatting of DHT messages.
  * Fixed incorrect debugging message.

22 November 2009: dht-0.11

  * Implemented IPv6 support (BEP-32).
  * Fixed a bug which could cause us to never mark a search as finished.
  * Fixed a bug that could cause us to send incomplete lists in response to
    find_nodes.
  * Limit the number of hashes that we're willing to track.
  * Made bucket maintenance slightly more aggressive.
  * Produce on-the-wire error messages to give a hint to the other side.
  * Added a bunch of options to dht-example to make it useful as
    a bootstrap node.
  * Send version "JC\0\0" when using dht-example.

18 October 2009: dht-0.10

  * Send nodes even when sending values.  This is a violation of the
    protocol, but I have been assured that it doesn't break any deployed
    implementation.  This is also what both libtorrent and uTorrent do.
  * Give up immediately on a search peer when no token was provided.  This
    is a very reasonable extension to the protocol, and certainly doesn't
    break anything.
  * Parse heterogeneous values lists correctly.  This is mandated by BEP 32.

20 September 2009: dht-0.9

  * Fixed incorrect computation of number of nodes.
  * Made the initial bucket split eagerly (speeds up bootstrapping).
  * Fixed initial filling of search buckets (speeds up searches).

28 July 2009: dht-0.8

  * Fixed a crash when expiring the first search on the list.
  * Fixed freeing of the search list when uniniting with dofree = 1.

24 June 2009: dht-0.7
